; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_bb.c_PBI_BB_Menu.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_bb.c_PBI_BB_Menu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PBI_BB_enabled = common dso_local global i32 0, align 4
@buttondown = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [42 x i8] c"blackbox button down interrupt generated\0A\00", align 1
@BB_BUTTON_IRQ_MASK = common dso_local global i32 0, align 4
@PBI_IRQ = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PBI_BB_Menu() #0 {
  %1 = load i32, i32* @PBI_BB_enabled, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %16

4:                                                ; preds = %0
  %5 = load i64, i64* @buttondown, align 8
  %6 = load i64, i64* @FALSE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %16

8:                                                ; preds = %4
  %9 = call i32 @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @D(i32 %9)
  %11 = call i32 (...) @CPU_GenerateIRQ()
  %12 = load i32, i32* @BB_BUTTON_IRQ_MASK, align 4
  %13 = load i32, i32* @PBI_IRQ, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* @PBI_IRQ, align 4
  %15 = load i64, i64* @TRUE, align 8
  store i64 %15, i64* @buttondown, align 8
  br label %16

16:                                               ; preds = %3, %8, %4
  ret void
}

declare dso_local i32 @D(i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @CPU_GenerateIRQ(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
